# tagias-python

./: LICENSE  README.md  setup.cfg  setup.py  tagias.py  test.py
tagias/: tagias.py
tagias.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
