[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = tagias-python
author = Vladimir Kryazh
author_email = vladimir@tagias.com
description = Public python module for tagias.com external API
url = https://github.com/tagias/tagias-python
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
platforms =
	POSIX
	Windows
keywords =
    tagias
    annotation
    tag
    label

[options]
packages = find:
include_package_data = true
python_requires = >=3.4
install_requires =
	importlib_metadata; python_version<"3.8"
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.entry_points]
